# enexlib

./: .gitignore  README.md  Test.enex  pyproject.toml  requirements.txt  setup.py  test_enexlib.py
.github/workflows/: run-tests.yml
enexlib/: __init__.py  enexlib.py
enexlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/enexlib/: __init__.py  enexlib.py
